# rtd

./: .gitignore  README.md  module.json  pyproject.toml  stash.patch
File: tests/: test_processor_dynamic_module.py  test_restore_backup.py
examples/: submersion.py  submersion_server_client.py
experiments/noise_study/: acquire_test_videos.py  noise_study.py
materials/prompts/: dancing_fibers.txt  good_prompts_wl.txt  good_prompts_wl_community.txt
scripts/: save_video_for_testing.py  submersion.py  submersion_new.py  submersion_server_client.py  submersion_server_client_fastpostproc.py  test_human_seg.py  test_latency.py
src/rtd/dynamic_processor/: base_dynamic_module.py  dynamic_module.good  dynamic_module.py  dynamic_processor.py  module.json  processor_dynamic_module.py  test_dynamic_module.py
src/rtd/dynamic_processor/backup/: backup_dynamic_class_250214_0926.py  good_flow.py
src/rtd/dynamic_processor/tests/: test_dynamic_class.py  test_dynamic_module.py
src/rtd/sdxl_turbo/: diffusion_engine.py  diffusion_engine.py.bak  embeddings_mixer.py
src/rtd/utils/: accgyro_receiver.py  audio_detector.py  dynamic_processor.py  input_image.py  misc_utils.py  optical_flow.py  oscillators.py  posteffect.py  prompt_provider.py  segmentation_detection.py
src/rtd/utils/infrared/: colorize_infrared.py  ddcolor_model.py  infer.py
src/rtd/utils/infrared/basicsr/archs/: __init__.py  ddcolor_arch.py  discriminator_arch.py  vgg_arch.py
src/rtd/voice/: speech_to_text_streaming.py
tests/: test_delete_fn_func.py  test_dynamic_module_cuda.py  test_dynamic_processor_exception_handling.py  test_inputimage.py  test_inputimage_processor.py  test_processor_delete_fn_func.py  test_prompt_provider_microphone.py
