[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rtd"
version = "0.1.0"
description = "Real-time diffusion tools"
authors = [{ name = "Your Name", email = "info@lunar-ring.ai" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
  "huggingface_hub==0.25.1",
  "diffusers==0.27.0",
  "tokenizers==0.20.0",
  "spatial-correlation-sampler==0.4.0",
  "transformers==4.46.3",
  "timm==1.0.14",
  "torch",
  "Pillow",
  "accelerate",
  "numpy",
  "sounddevice==0.5.1"
]

[tool.setuptools.packages.find]
where = ["src"]
