[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rtd"
version = "0.1.0"
description = "Real-time diffusion tools"
authors = [{ name = "Lunar Ring", email = "info@lunar-ring.ai" }]
license = { text = "BSD 3-Clause" }
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "huggingface_hub==0.23.2",
  "diffusers==0.27.0",
  "tokenizers==0.20.3",
  "spatial-correlation-sampler==0.5.0",    
  "lunar_tools @ git+https://github.com/lunarring/lunar_tools",
  "transformers==4.46.3",
  "timm==1.0.14",
  "Pillow",
  "accelerate",
  "numpy",
  "sounddevice==0.4.6",
  "ultralytics",
  "stable-fast==1.0.0",
  "xformers",
  "openai>=1.0.0",
  "ultralytics"
]

[tool.setuptools.packages.find]
where = ["src"]
